codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_hidden_status_only.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: status_details
---
Our systems are thinking a bit more about this request before responding.
