codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_status_only.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: rendered
---
• Working (0s • esc to interrupt)
  └ Our systems are thinking a bit more about this request before responding.


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
